--- a/src/app/component/navbar/navbar.component.css
+++ b/src/app/component/navbar/navbar.component.css
@@ -2,3 +2,8 @@
   height: 32px;
   width: 32px;
 }
+
+.submenu {
+  position: absolute;
+  z-index: 1000; /* Ensure a higher z-index than the navbar */
+}
