--- a/src/app/component/center-new/center-new.component.html
+++ b/src/app/component/center-new/center-new.component.html
@@ -26,7 +26,7 @@
                   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
 
-                <form [formGroup]="newCenterForm" (ngSubmit)="createCenter()" class="mb-4">
+                <form (ngSubmit)="createCenter($event)" [formGroup]="newCenterForm" class="mb-4">
                   <div class="row">
                     <div class="col-md-6 mb-3">
                       <div class="form-group">
