--- a/src/app/component/vouchers/vouchers.component.html
+++ b/src/app/component/vouchers/vouchers.component.html
@@ -16,7 +16,7 @@
         </div>
 
         <!-- Search Form -->
-        <form [formGroup]="searchForm" (ngSubmit)="searchVouchers()" class="d-flex justify-content-end">
+        <form [formGroup]="searchForm" (ngSubmit)="searchVouchersSubmit($event)" class="d-flex justify-content-end">
           <div class="d-flex align-items-center">
             <label class="visually-hidden">Voucher Code</label>
             <input type="text" formControlName="code" class="form-control mt-3" style="margin-bottom: -8px" placeholder="Voucher Code" />
