--- a/src/app/component/center-new/center-new.component.html
+++ b/src/app/component/center-new/center-new.component.html
@@ -107,18 +107,20 @@
                     <ng-container *ngIf="!newCenterForm.get('alwaysOpen').value">
                       <div class="col-md-6 mb-3">
                         <label>Opening Time</label>
-                        <ngb-timepicker formControlName="openingTime" [seconds]="false" [spinners]="false"></ngb-timepicker>
+                        <ngb-timepicker formControlName="openingHour" [seconds]="false" [spinners]="false"></ngb-timepicker>
                       </div>
 
                       <div class="col-md-6 mb-3">
                         <label>Closing Time</label>
-                        <ngb-timepicker formControlName="closingTime" [seconds]="false" [spinners]="false"></ngb-timepicker>
+                        <ngb-timepicker formControlName="closingHour" [seconds]="false" [spinners]="false"></ngb-timepicker>
                       </div>
                     </ng-container>
 
 
                     <ng-container *ngIf="selectedMaterials.length > 0">
-                      <mat-chip-grid #chipGrid aria-label="Enter keywords">
+
+                      <label class="mt-3">Accepted Recycling Materials:</label>
+                      <mat-chip-grid aria-label="Enter keywords">
                         <div *ngFor="let material of selectedMaterials">
                           <mat-chip-row (removed)="onRemoveMaterial(material)">
                             {{ material }}
@@ -143,7 +145,8 @@
 
 
                   <div class="mt-4 d-flex justify-content-end">
-                    <button [disabled]="state.dataState === DataState.LOADING || newCenterForm.invalid || newCenterForm.pristine || (isLoading$ | async)"
+                    <button [disabled]="state.dataState === DataState.LOADING || newCenterForm.invalid || newCenterForm.pristine ||
+                            !isAcceptedMaterialsChosen() || (isLoading$ | async)"
                             type="submit" class="btn btn-success me-2">
                       <span *ngIf="isLoading$ | async" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                       <span *ngIf="isLoading$ | async">Saving...</span>
