--- a/src/app/component/verify/verify.component.html
+++ b/src/app/component/verify/verify.component.html
@@ -54,7 +54,7 @@
             <div class="card-body">
               <div class="text-center">
                 <h2><i style="margin-right: 5px;" class="fa-solid fa-leaf"></i> msgRecyclingRewards</h2>
-                <h5 class="card-title mt-4 mb-5">Please Enter New Password</h5>
+                <h5 class="card-title mt-4 mb-5">Please Enter A New Password</h5>
               </div>
               <div *ngIf="state.error" class="alert alert-danger bg-danger text-light border-0 alert-dismissible fade show" role="alert">
                 {{ state.error }}
@@ -62,7 +62,7 @@
               </div>
               <form #resetPasswordForm="ngForm" (ngSubmit)="renewPassword(resetPasswordForm)">
                 <div class="form-outline mb-4">
-                  <label class="form-label">New Password</label>
+                  <label class="form-label">Enter New Password</label>
                   <input type="password" ngModel name="password" [disabled]="(isLoading$ | async)" class="form-control" required minlength="5">
                 </div>
                 <div class="form-outline mb-4">
@@ -70,7 +70,7 @@
                   <input type="password" ngModel name="confirmPassword" [disabled]="(isLoading$ | async)" class="form-control" required minlength="5">
                 </div>
                 <div class="d-flex justify-content-center mb-4">
-                  <button [disabled]="(isLoading$ | async) || resetPasswordForm.invalid || resetPasswordForm.pristine" type="submit" class="btn btn-primary">
+                  <button [disabled]="(isLoading$ | async) || resetPasswordForm.invalid || resetPasswordForm.pristine" type="submit" class="btn btn-msg-color">
                     <span *ngIf="(isLoading$ | async)" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>
                     <span *ngIf="(isLoading$ | async)">Loading...</span>
                     <span *ngIf="!(isLoading$ | async)">Update Password</span>
