--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -158,7 +158,7 @@
 
           <div class="col-md-6 col-xl-6">
             <div class="card bg-c-green order-card">
-              <div class="card-block" [routerLink]="['/ecolearn']">
+              <div class="card-block" [routerLink]="['/eco-learn']">
                 <h5 class="m-b-20"><i class="fa-solid fa-lightbulb"></i> Eco Learn Daily</h5>
                 <span class="text-right"><p>{{ state?.appData?.data?.ecoTip }}</p></span>
                 <p class="m-b-0"><span class="f-right">View More</span></p>
